@@ -3600,6 +3600,7 @@ Content streams: 132767 bytes (42.85%)
 Structure Info: 0 bytes (0.00%)
 Attached Files: 0 bytes (0.00%)
 XRef Table: 21082 bytes (6.80%)
+Piece Info: 0 bytes (0.00%)
 Unclassified: 11229 bytes (3.62%)
 \end{verbatim}
 \end{framed}\pagestyle{empty}\thispagestyle{fancy}
@@ -3614,12 +3615,13 @@ Unclassified: 11229 bytes (3.62%)
   ("Structure Info", 0, 0.0),
   ("Attached Files", 0, 0.0),
   ("XRef Table", 21082, 6.8048378194306816),
+  ("Piece Info", 0, 0.0),
   ("Unclassified", 11229, 3.6244912187831857)
 ]
 \end{verbatim}
 \end{framed}\pagestyle{empty}\thispagestyle{fancy}
 
-\noindent Note that, due to small inaccuracies in the method, it is possible for the \texttt{Unclassified} number to be negative.
+\noindent Note that, due to small inaccuracies in the method, it is possible for the \texttt{Unclassified} numbers to be negative.
 
 \begin{cpdflib}
 \clearpage
