@@ -1,9 +1,10 @@
 2.7.3 (to come)
 
 o New -center-to-fit centres pages on a given paper size
-o Allow bold, italic, colours for bookmarks
+o Allow bold, italic, colours for JSON bookmarks
 o Clean up @B implementation for -split-on-bookmarks
 o Add @b<n>@ for trimming bookmark text to given length
+o Add Piece Info to -composition[-json]
 
 2.7.2 (October 2024)
 
